<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreateConvertUpdates</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_uname">Username</string>
    <string name="string_password">Password</string>
    <string name="string_register">Register</string>
    <string name="string_login">Login</string>
    <string name="string_fname">Firstname</string>
    <string name="string_lname">Lastname</string>
    <string name="string_mname">Middlename</string>
    <string name="string_username">Username</string>
    <string name="string_email">Email</string>
    <string name="string_cancel">Cancel</string>
    <string name="null_val"></string>
    <string name="string_confirm_password">Confirm Password</string>
    <string name="string_message">Message</string>
    <string name="string_title">Title</string>
    <string name="string_content">Content</string>
    <string name="string_links"><a href="#" > View website </a></string>
    <string name="notify_me_string">Notify me to every updates</string>
    <string name="logged_me_string">Logged me in automatically</string>

</resources>
