<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/mp_image"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" />

    <Spinner
        android:id="@+id/messaging_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/err_message_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_val" />

    <EditText
        android:id="@+id/messaging_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_title" />

    <TextView
        android:id="@+id/err_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_val" />

    <EditText
        android:id="@+id/messaging_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.02"
        android:ems="10"
        android:hint="@string/string_content"
        android:singleLine="false" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/err_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_val" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" >

        <Button
            android:id="@+id/m_btn_message"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn_seagull"
            android:text="@string/string_message"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/m_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/m_btn_message"
            android:layout_alignBottom="@+id/m_btn_message"
            android:layout_alignParentRight="true"
            android:layout_marginRight="26dp"
            android:background="@drawable/custom_btn_orange"
            android:text="@string/string_cancel" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

</LinearLayout>